[SIX-HOTFIX] fix : unModifiableList로 인한 Slice 문제 해결